@@ -1984,3 +1984,4 @@
 * flms:    added g_flushItems (NQ)
 * flms:    mg's can make headshots
 * flms:    you also hear hitsounds when Friendly Fire is off and g_reflectFriendlyFire is on
+* flms:    mg's can reload midclip
